<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/waypoint_viewer_add"
        android:icon="@android:drawable/ic_menu_add"        
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/add_waypoint"/>
    <item
        android:id="@+id/waypoint_sortby_icao"                
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/sortby_icao"/>
    <item
        android:id="@+id/waypoint_sortby_distance"                
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/sortby_distance"/>
    <item
        android:id="@+id/waypoint_sortby_name"                
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/sortby_name"/>
</menu>